--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,12 +1,12 @@
 .homelink1 {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .homelink2 {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-a {
+.link {
   font-size: 35px;
   text-decoration: none;
   margin: 35px;
@@ -16,27 +16,27 @@ a {
   justify-content: center;
 }
 
-a::after {
-    content: "";
-    position:absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px; 
-    background: currentColor;
- 
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform 225ms ease-in;
- }
+.link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: currentColor;
 
- a:hover::after {
-    transform: scaleX(1);
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 225ms ease-in;
+}
+
+.link:hover::after {
+  transform: scaleX(1);
 }
 
 .header {
-    height: 250px;
-    box-shadow: 3px 4px 8px 2px rgba(0,0,0,0.67);
-    display: flex;
-    justify-content: center;
+  height: 250px;
+  box-shadow: 3px 4px 8px 2px rgba(0, 0, 0, 0.67);
+  display: flex;
+  justify-content: center;
 }
