--- a/src/css/ranking.css
+++ b/src/css/ranking.css
@@ -8,6 +8,9 @@
 }
 
 .ranking_box {
-  height: 700px;
-  box-shadow: 3px 4px 8px 2px rgba(0, 0, 0, 0.67);
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  min-height: 100vh;
+  background-color: black;
 }
