--- a/src/css/voteLSj.css
+++ b/src/css/voteLSj.css
@@ -1,15 +1,30 @@
+.body {
+  background-color: black;
+  width: 100vw;
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+
 .b1 {
   color: white;
-  background-color: grey;
-  font-size: 50px;
+  background-color: #202224;
+  font-size: 30px;
+  padding: 10px;
+  border-radius: 10px;
+}
+.b1:hover {
+  background-color: #161718;
 }
 
 .buttondiv {
+  max-width: 500px;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: auto auto;
   column-gap: 20px;
   row-gap: 20px;
-  margin: 20px;
+  padding: 20px;
 }
 
 .score {
@@ -21,10 +36,14 @@
 
 .update_score {
   margin: auto;
-  font-size: 30px;
+  font-size: 20px;
   display: flex;
   justify-content: center;
-  background-color: grey;
+  background-color: #04aa6d;
   color: white;
-  padding: 10px;
+  padding: 20px;
+  border-radius: 10px;
+}
+.update_score:hover {
+  background-color: #059862;
 }
