--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,42 +1,36 @@
-.homelink1 {
-  text-decoration: none;
+.body {
+  display: block;
 }
-
-.homelink2 {
-  text-decoration: none;
-}
-
-.link {
-  font-size: 35px;
-  text-decoration: none;
-  margin: 35px;
-  color: black;
-  position: relative;
-  display: flex;
-  justify-content: center;
-}
-
-.link::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
+.heading {
+  padding-top: 10%;
+  text-align: center;
   width: 100%;
-  height: 2px;
-  background: currentColor;
-
-  transform: scaleX(0);
-  transform-origin: left;
-  transition: transform 225ms ease-in;
+  display: block;
+  margin: 0;
+  font-size: 40px;
+  color: rgb(30, 30, 30);
 }
-
-.link:hover::after {
-  transform: scaleX(1);
-}
-
-.header {
-  height: 250px;
-  box-shadow: 3px 4px 8px 2px rgba(0, 0, 0, 0.67);
+.links {
   display: flex;
   justify-content: center;
+}
+.link {
+  font-size: 20px;
+  background-color: rgb(45, 147, 147);
+  margin: 50px 50px;
+  padding: 15px 30px;
+  color: rgb(0, 0, 0);
+  border-radius: 10px;
+}
+@media screen and (max-width: 670px) {
+  .links {
+    display: block;
+    margin: 10px;
+  }
+  .link {
+    width: 90%;
+    margin: 5%;
+    padding: 5%;
+    border-radius: 40px;
+  }
 }
