--- a/src/css/home.css
+++ b/src/css/home.css
@@ -19,8 +19,12 @@
   background-color: rgb(45, 147, 147);
   margin: 50px 50px;
   padding: 15px 30px;
-  color: rgb(0, 0, 0);
+
   border-radius: 10px;
+}
+.link > a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
 }
 @media screen and (max-width: 670px) {
   .links {
