--- a/src/css/home.css
+++ b/src/css/home.css
@@ -2,39 +2,56 @@
   display: block;
 }
 .heading {
-  padding-top: 10%;
-  text-align: center;
   width: 100%;
-  display: block;
+  padding-top: 50px;
+  text-align: center;
   margin: 0;
   font-size: 40px;
   color: rgb(30, 30, 30);
 }
-.links {
-  display: flex;
-  justify-content: center;
+
+.buttons {
+  display: block;
+  margin: 0;
+}
+.list-item {
+  list-style-type: none;
+  margin: 20px auto;
 }
 .link {
-  font-size: 20px;
-  background-color: rgb(45, 147, 147);
-  margin: 50px 50px;
-  padding: 15px 30px;
-
-  border-radius: 10px;
-}
-.link > a {
-  color: rgb(0, 0, 0);
+  border-radius: 30px;
   text-decoration: none;
+  text-align: center;
+  margin: 0;
 }
-@media screen and (max-width: 670px) {
-  .links {
-    display: block;
-    margin: 10px;
+.aButton {
+  color: black;
+  font-size: 30px;
+  background-color: rgb(45, 147, 147);
+  margin: 0;
+  border-radius: 40px;
+  padding: 5% 0;
+  width: 80vw;
+  max-width: 350px;
+}
+@media screen and (min-width: 500px) {
+  .buttons {
+    display: flex;
+    justify-content: center;
   }
   .link {
-    width: 90%;
-    margin: 5%;
-    padding: 5%;
-    border-radius: 40px;
+    border-radius: 10px;
+    font-size: 40px;
+  }
+  .list-item {
+    list-style-type: none;
+    margin: 20px;
+  }
+  .aButton {
+    background-color: rgb(45, 147, 147);
+    margin: 0;
+    border-radius: 20px;
+    width: 200px;
+    height: 70px;
   }
 }
