--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -4,19 +4,22 @@
 }
 .body {
   background-color: black;
+  max-width: 100vw;
+  margin: 0;
 }
 header {
-  margin: 10px;
-  margin-top: 0;
+  max-width: 95%;
+  margin: auto;
   padding-top: 10px;
   display: flex;
   justify-content: space-between;
 }
 .boxes {
+  max-width: 95%;
+  margin: auto;
   display: grid;
   width: fit-content;
   grid-template-columns: auto auto auto;
-  margin: auto;
 }
 
 .box {
@@ -79,6 +82,7 @@ header {
   border: none;
   border-radius: 8px;
   background: #04aa6d;
+  margin-right: 10px;
 }
 .button-hover:hover {
   background: #059862;
