--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -103,14 +103,15 @@ header {
 }
 
 .popup {
-  display: grid;
   visibility: hidden;
-  width: 30%;
-  position: absolute;
-  background: #e7e9eb;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  display: grid;
+  background: #1c1d1d;
   z-index: 1000;
-  top: 40%;
-  left: 40%;
   border: 2px solid grey;
   border-radius: 10px;
 }
