Updated admin css.

--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -4,18 +4,21 @@
 }
 .body {
   background-color: black;
-  max-width: 100vw;
+  max-width: 100%;
   margin: 0;
+  padding: 0;
 }
 header {
-  max-width: 100%;
+  background-color: black;
+  width: 100%;
   margin: auto;
-  padding-top: 10px;
+  padding: 10px;
   display: flex;
+  position: fixed;
   justify-content: space-between;
 }
 .boxes {
-  max-width: 95%;
+  padding-top: 8%;
   margin: auto;
   display: grid;
   width: fit-content;
@@ -27,6 +30,7 @@ header {
   padding: 20px;
   margin: 20px;
   background: #202224;
+  max-height: 600px;
 }
 .allow {
   width: 100px;
@@ -70,13 +74,17 @@ header {
   display: flex;
 }
 .box-seperate {
-  margin: 20px;
+  margin: 10px;
 }
 .element {
   padding: 10px;
 }
 .id {
   text-align: center;
+  font-size: 17px;
+}
+.name {
+  font-size: 20px;
 }
 .button {
   border: none;
@@ -121,6 +129,10 @@ header {
   z-index: 1000;
   border: 2px solid grey;
   border-radius: 10px;
+}
+.newUser {
+  margin-top: 5px;
+  height: 100%;
 }
 input {
   margin: 20px;
