--- a/src/css/diagram.css
+++ b/src/css/diagram.css
@@ -1,12 +1,17 @@
 .bar-container {
   width: 95vw;
+  max-width: 1300px;
+  margin: auto;
   height: 50px;
   padding: 50px 0px 50px 30px;
 }
+
 .border {
-  border: 2px solid white;
+  border: 4px solid rgb(165, 171, 175);
+  border-radius: 30px;
+  overflow: hidden;
 }
 .bar {
-  background-color: blue;
-  height: 50px;
+  background-color: rgb(46, 196, 182);
+  min-height: 50px;
 }
