--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,37 +1,3 @@
-.inputs {
-  width: 100%;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-}
-.list-item {
-  display: flex;
-  justify-content: center;
-}
-.blue {
-  background-color: #0071e3;
-  border-radius: 10px;
-  padding: 10px 20px;
-}
-.blue:hover {
-  background-color: #0077ed;
-}
-.input-field {
-  padding: 15px 20px;
-  margin-bottom: 0;
-  border-radius: 20px;
-  color: black;
-}
-.list-item {
-  margin: 0;
-  padding: 0;
-}
-.label {
-  margin: 0;
-  color: red;
-  background-color: rgb(0, 0, 0);
-}
-
 .heading {
   width: 100%;
   padding-top: 50px;
@@ -39,4 +5,52 @@
   margin: 0;
   font-size: 40px;
   color: rgb(30, 30, 30);
+}
+.error-message {
+  padding: 5px;
+  background-color: rgb(199, 24, 24);
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+.label {
+}
+.input-container,
+.button-container {
+  width: 50%;
+  max-width: 450px;
+  margin: auto;
+}
+.form-items {
+  width: 100%;
+  margin-top: 20px;
+}
+.input-field {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  border-radius: 8px;
+  color: black;
+}
+.input-field:focus {
+  outline: none;
+}
+.button {
+  padding: 15px 30px;
+}
+.blue {
+  background-color: #0071e3;
+}
+.blue:hover {
+  background-color: #0077ed;
+}
+
+@media screen and (max-width: 600px) {
+  .input-container,
+  .button-container {
+    max-width: 80%;
+    margin: auto;
+  }
 }
