--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -11,7 +11,8 @@
 }
 .navbar {
   background: black;
-  position: fixed;
+  position: sticky;
+  top: 0;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -36,7 +37,6 @@
 
 .boxes-container {
   display: grid;
-  padding-top: 50px;
 }
 .box {
   border-radius: 20px;
@@ -48,6 +48,12 @@
   z-index: 1;
 }
 @media screen and (max-width: 400px) {
+  .navbar {
+    display: inline;
+  }
+  .nav-element {
+    max-height: 200px;
+  }
   .boxes-container {
     overflow-y: scroll;
     height: 100vh;
@@ -96,8 +102,8 @@
   text-align: center;
 }
 .elementWrapper {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: auto auto;
 }
 .box-element {
   margin: 10px;
