--- a/src/css/login.css
+++ b/src/css/login.css
@@ -64,3 +64,13 @@
   margin: 0;
   margin-top: 0;
 }
+
+.navlink {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0 1rem;
+  height: 100%;
+  cursor: pointer;
+}
