--- a/src/css/login.css
+++ b/src/css/login.css
@@ -46,12 +46,6 @@
   padding: 10px 0;
   border-radius: 10px;
 }
-.blue {
-  background-color: #0071e3;
-}
-.blue:hover {
-  background-color: #0077ed;
-}
 
 @media screen and (max-width: 600px) {
   .input-container,
@@ -73,4 +67,13 @@
   padding: 0 1rem;
   height: 100%;
   cursor: pointer;
+}
+.blue {
+  background-color: #0071e3;
+}
+.blue:hover {
+  background-color: #0077ed;
+}
+.green {
+  background-color: green;
 }
